# online_store

./: .env.sample  .gitignore  README.md  appeals.csv  catalog.json  configurations.py  groups.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py  0003_blog_is_published_alter_blog_slug.py  0004_blog_email.py  0005_alter_blog_image.py  0006_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_category_product_created_at_and_more.py  0003_product_manufactured_at.py  0004_remove_product_manufactured_at.py  0005_contact.py  0006_alter_product_created_at_alter_product_updated_at.py  0007_alter_product_photo_version.py  0008_rename_is_active_version_activity.py  0009_product_seller.py  0010_product_is_active.py  0011_alter_product_options.py
catalog/templates/catalog/: add_product.html  base.html  category_list.html  contact_list.html  contacts.html  home_page.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py
users/: admin.py  form.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  password_reset.html  user_form.html
(+2 files in other folders)
