[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Nikolay Averin <rizzzon116@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.23.0"
flake8 = "^7.0.0"
pytils = "^0.4.1"
django-phonenumber-field = "^7.3.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
